Added save and load

--- a/tweets_sentiment_analysis.ipynb
+++ b/tweets_sentiment_analysis.ipynb
@@ -636,7 +636,8 @@
     "from sklearn.model_selection import train_test_split , cross_validate , GridSearchCV\n",
     "from sklearn.metrics import classification_report , confusion_matrix\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.decomposition import TruncatedSVD"
+    "from sklearn.decomposition import TruncatedSVD\n",
+    "import joblib"
    ]
   },
   {
@@ -799,9 +800,9 @@
    },
    "outputs": [],
    "source": [
-    "# svd = TruncatedSVD(4_000)\n",
-    "# X = svd.fit_transform(X)\n",
-    "# np.save(\"data_preprocessed\",X)"
+    "svd = TruncatedSVD(4_000)\n",
+    "X = svd.fit_transform(X)\n",
+    "np.save(\"data_preprocessed\",X)"
    ]
   },
   {
@@ -1041,7 +1042,7 @@
    "source": [
     "rf = RandomForestClassifier()\n",
     "rf_param = {\n",
-    "    \"n_estimators\" : [50 ,100 , 150]\n",
+    "    \"n_estimators\" : [50, 100, 150]\n",
     "}\n",
     "rf_gcv = GridSearchCV(estimator= rf , param_grid= rf_param , n_jobs= -1 , verbose= 3 , cv = 3)"
    ]
@@ -1073,6 +1074,52 @@
    "outputs": [],
    "source": [
     "pd.DataFrame(rf_gcv.cv_results_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abfea8cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_analasys(y_test , rf_gcv.predict(X_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d00e3eb2",
+   "metadata": {},
+   "source": [
+    "### Save model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "259f20f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "joblib.dump(rf_gcv.best_estimator_ , \"RandomForest_Model.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b234f4f7",
+   "metadata": {},
+   "source": [
+    "### Load model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c81af31c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf_gcv = joblib.load(\"RandomForest_Model.pkl\")"
    ]
   },
   {
@@ -1146,6 +1193,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f79d8909",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_analasys(y_test , svc_gcv.predict(X_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d0d2b9f",
+   "metadata": {},
+   "source": [
+    "### Save model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cda6e896",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "joblib.dump(svc_gcv.best_estimator_ , \"SVC_Model.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd434884",
+   "metadata": {},
+   "source": [
+    "### Load model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96119afa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svc_gcv = joblib.load(\"SVC_Model.pkl\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0463f4f1",
    "metadata": {},
@@ -1182,7 +1275,7 @@
    "source": [
     "knn = KNeighborsClassifier()\n",
     "knn_param = {\n",
-    "    \"n_neighbors\" : [5 ,10 , 15 , 20 , 25 ,30],\n",
+    "    \"n_neighbors\" : [5 ,10 , 15 , 20 , 25 ,30, 35, 40, 45, 50],\n",
     "}\n",
     "knn_gcv = GridSearchCV(estimator= knn , param_grid= knn_param , n_jobs= -1 , verbose= 3 , cv = 3)"
    ]
@@ -1213,6 +1306,52 @@
    "outputs": [],
    "source": [
     "pd.DataFrame(knn_gcv.cv_results_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71d85609",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_analasys(y_test , knn_gcv.predict(X_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df29f4dd",
+   "metadata": {},
+   "source": [
+    "### Save model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "906b70db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "joblib.dump(knn_gcv.best_estimator_ , \"KNN_Model.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acca4071",
+   "metadata": {},
+   "source": [
+    "### Load model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80de0c0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knn_gcv = joblib.load(\"KNN_Model.pkl\")"
    ]
   },
   {
@@ -1288,6 +1427,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b366af5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_analasys(y_test , lr_gcv.predict(X_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec87a060",
+   "metadata": {},
+   "source": [
+    "### Save model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d1a466b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "joblib.dump(lr_gcv.best_estimator_ , \"LogisticRegression_Model.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "073d7f76",
+   "metadata": {},
+   "source": [
+    "### Load model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d896d2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr_gcv = joblib.load(\"LogisticRegression_Model.pkl\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1fa407c8",
    "metadata": {},
@@ -1353,6 +1538,42 @@
    "outputs": [],
    "source": [
     "pd.DataFrame(gnb_cv)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e58ab71e",
+   "metadata": {},
+   "source": [
+    "### Save model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2781288",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "joblib.dump(gnb , \"GaussianNB_Model.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b37e6df",
+   "metadata": {},
+   "source": [
+    "### Load model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc9d3576",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gnb = joblib.load(\"GaussianNB_Model.pkl\")"
    ]
   },
   {
@@ -1797,11 +2018,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "fea0578c9afaac32b47b425f61920a3e149da5bc32fb9069c154b8a2600d3b1a"
-  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 ('mlenv')",
    "language": "python",
    "name": "python3"
   },
@@ -1815,7 +2033,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.4"
   },
   "toc": {
    "base_numbering": 1,
@@ -1872,6 +2090,11 @@
    ],
    "varInspector_section_display": "block",
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "1f91c15ec56bcd0dd3b5eb0fafe2110359e9a991f75eb7c92ef2c0aa8be81d1b"
+   }
   }
  },
  "nbformat": 4,
